Mon Sep 13 11:23:21 BST 2004 (trog)
-----------------------------------
  * libclamav: re-write HTML code:
	- decode MS Script Encoder code
	- doesn't require mmap(), uses it if available
	- extract href tag values
	- single pass parser

Mon Sep 13 03:31:58 CEST 2004 (tk)
----------------------------------
  * libclamav: CL_BLOCKMAX: allow blocking (i.e. marking as viruses) of
	       archives that exceed limits (in std mode they're only ignored).
	       Patch by Christophe Poujol <Christophe.Poujol*atosorigin.com>.
  * clamd: new directive ArchiveBlockMax
  * clamscan: new option --block-max

Mon Sep 13 02:22:31 CEST 2004 (tk)
----------------------------------
  * clamscan: fix miscounting when trying to scan inaccessible archives
	      (thanks to Robert Hogan <robert*roberthogan.net>)

Mon Sep 13 01:41:48 CEST 2004 (tk)
----------------------------------
  * libclamav/untar.c: return with CL_EFORMAT instead of CL_EDSIG

Sun Sep 12 20:54:05 BST 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Now builds with configure --enable-debug

Sun Sep 12 16:37:04 CEST 2004 (tk)
----------------------------------
  * docs/MacOSX: include Mac OS X instructions (thanks to Dale Enterprise L.L.C)

Sun Sep 12 15:25:12 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Use .../share/clamav/clamav-milter/locale for the locale
				information
			Added first draft of SESSION code. Do NOT use in a
				production environment. It is disabled by
				default.

Wed Sep  8 21:47:09 BST 2004 (njh)
----------------------------------
  * contrib/init/RedHat:	Start clamav before sendmail and shut it down
					afterwards

Wed Sep  8 17:05:08 BST 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Fix file descriptor leak when reading a corrupt tar file
  * clamav-milter:	Better quarantine filename handling on MACOS/X
			Added i18n support
			Better error message if the quarantine directory is
				publically accessable
